--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  	background: url(../img/back-main.jpg) no-repeat;
+  	background: url(img/back-main-2.jpg) no-repeat;
     background-size: 250%;
   	font-family: 'Roboto Slab', serif;
 	font-size: 36px;
